## Unreleased

* [TT-8892] Migrate to github actions
* [OPS-213] GHActions: add Node 16 and remove Node 10

## 0.1.2

* [TT-8216] Specify public repository

## 0.1.1

* [TT-8216] Add the repository variable

## 0.1.0

* [TT-5673] Add JWK Authorizers