@@ -1,5 +1,10 @@
 name: Build and Test
 on: [push, pull_request]
+
+permissions:
+  pull-requests: write
+  contents: write
+
 jobs:
   test:
     strategy:
@@ -21,3 +26,14 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  dependabot-auto-merge:
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: ${{ github.actor == 'dependabot[bot]' && github.event_name == 'pull_request'}}
+    steps:
+      - name: Enable auto-merge for Dependabot PRs
+        run: gh pr merge --auto --merge "$PR_URL"
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
