@@ -2,6 +2,7 @@
 
 * [TT-8892] Migrate to github actions
 * [OPS-213] GHActions: add Node 16 and remove Node 10
+* [PLAT-89] Github: Dependabot AutoMerge
 
 ## 0.1.2
 
